--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -2,10 +2,10 @@
   box-sizing: border-box;
 }
 
-/* .matrix {
+.matrix {
   display: flex;
-  flex-direction: row;
-} */
+  flex-direction: column;
+}
 
 .box {
   height: 300px;
@@ -22,14 +22,21 @@
   box-shadow: 10px 10px 10px rgba(150, 150, 150, 0.5);
 }
 
-/* .box:nth-child(2) {
-  background-color: #ff5733;
-}
-
 .boxes {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  /* align-self: center;
-} */
+  flex-direction: row;
+  align-self: center;
+  justify-content: center;
+}
+
+.color-shift-button {
+  width: 100px;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  background-color: "#f9f5ec";
+}
