--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -2,9 +2,38 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  margin: 0;
+
+  padding: 0;
+
+  min-width: 100%;
+  width: 100%;
+  max-width: 100%;
+
+  min-height: 100%;
+  height: 100%;
+  max-height: 100%;
+  background-color: #f9f5ec;
+}
+
 .matrix {
+  height: 100%;
+  width: 100%;
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.boxes {
+  /* border: 2px solid greenyellow; */
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
@@ -12,23 +41,13 @@
   width: 300px;
   background-color: #5c6bc0;
   color: white;
-  font-size: 100px;
-  align-self: center;
+  font-size: 30px;
 
   margin: 50px;
-  padding: 0;
+  padding: 10px;
   border: 2px solid lightgray;
   border-radius: 10px;
-  box-shadow: 10px 10px 10px rgba(150, 150, 150, 0.5);
-}
-
-.boxes {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  justify-content: center;
+  box-shadow: 10px 10px 10px rgba(197 174 145 0.5);
 }
 
 .color-shift-button {
@@ -38,5 +57,14 @@
   padding: 0;
   border: 2px solid lightgray;
   border-radius: 10px;
-  background-color: "#f9f5ec";
+  background-color: #f9f5ec;
+}
+
+.textbox {
+  width: 500px;
+  height: 200px;
+  margin: 15px;
+  padding: 15px;
+  border-bottom: 3px solid gray;
+  border-radius: 5px;
 }
