--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -4,20 +4,18 @@
 
 html,
 body {
-  margin: 0;
-
+  margin: 1vmin 1vmin;
   padding: 0;
-
-  min-width: 100%;
   width: 100%;
-  max-width: 100%;
-
-  min-height: 100%;
   height: 100%;
-  max-height: 100%;
-  background-color: #f9f5ec;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f9f5ec;
+}
 .matrix {
   height: 100%;
   width: 100%;
@@ -30,78 +28,43 @@ body {
 
 .boxes {
   /* border: 2px solid greenyellow; */
+  width: inherit;
+  height: inherit;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-@media only screen and (min-width: 1080px) {
-  .box {
-    height: 300px;
-    width: 300px;
-    background-color: #5c6bc0;
-    color: white;
-    font-size: 30px;
+.box {
+  height: 40%;
+  width: 60%;
+  background-color: #5c6bc0;
+  color: white;
+  font-size: 30px;
 
-    margin: 50px;
-    padding: 10px;
-    border: 2px solid lightgray;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px rgba(197 174 145 0.5);
-  }
-
-  .color-shift-button {
-    width: 100px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    border: 2px solid lightgray;
-    border-radius: 10px;
-    background-color: #f9f5ec;
-  }
-
-  .textbox {
-    width: 500px;
-    height: 200px;
-    margin: 15px;
-    padding: 15px;
-    border-bottom: 3px solid gray;
-    border-radius: 10px;
-  }
+  margin: 5%;
+  padding: 0;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px rgba(197, 174, 145, 0.5);
 }
 
-@media only screen and (max-width: 1080px) {
-  .box {
-    height: 200px;
-    width: 200px;
-    background-color: #5c6bc0;
-    color: white;
-    font-size: 30px;
+.color-shift-button {
+  width: 35%;
+  height: 5%;
+  margin: 0;
+  padding: 0;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  background-color: #f9f5ec;
+}
 
-    margin: 33px;
-    padding: 6px;
-    border: 1px solid lightgray;
-    border-radius: 6px;
-    box-shadow: 6px 6px 6px rgba(197 174 145 0.5);
-  }
-
-  .color-shift-button {
-    width: 66px;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    border: 1px solid lightgray;
-    border-radius: 6px;
-    background-color: #f9f5ec;
-  }
-
-  .textbox {
-    width: 300px;
-    height: 80px;
-    margin: 6px;
-    padding: 6px;
-    border-bottom: 2px solid gray;
-    border-radius: 6px;
-  }
+.textbox {
+  width: 90%;
+  height: 20%;
+  margin: 15px;
+  padding: 15px;
+  border-bottom: 3px solid gray;
+  border-radius: 10px;
 }
