--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -17,207 +17,412 @@ body {
   align-items: center;
   background: linear-gradient(to bottom, #3399ff 0%, #ff3300 100%);
 }
+@media only screen and (min-width: 1080px) {
+  .matrix {
+    height: 100%;
+    width: 100%;
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0 2% 0 4%;
+    align-items: center;
+  }
 
-.matrix {
-  height: 100%;
-  width: 100%;
-  /* border: 2px solid black; */
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  margin: 0 2% 0 4%;
-  align-items: center;
+  .boxes-r {
+    /* border: 2px solid greenyellow; */
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box {
+    height: 100%;
+    width: 100%;
+    display: table;
+    text-align: center;
+
+    font-family: "Bangers";
+    font-size: 22px;
+    padding: 0;
+
+    border-radius: 10px;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
+  }
+
+  .timestamp {
+    position: relative;
+    top: 20%;
+    font-size: 135px;
+    display: table-cell;
+    vertical-align: center;
+    /* color: rgba(152, 152, 156, 1); */
+
+    background: -webkit-linear-gradient(#45fc79, #3604b6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .box-dd > .timestamp {
+    position: relative;
+    top: 5%;
+    left: 7%;
+    font-size: 300px;
+    display: table-cell;
+    vertical-align: center;
+    text-align: left;
+
+    background: -webkit-linear-gradient(#3eadcf, #abe9cd);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .boxes-dd {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: stretch;
+  }
+
+  .boxes-tt {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .box-dd {
+    font-size: 1000%;
+    box-shadow: none;
+  }
+
+  .box-hh {
+    background-color: #f7b42c;
+    background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%);
+  }
+
+  .box-mm {
+    margin: 5%;
+    padding: 0;
+    background-color: #90d5ec;
+    background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
+  }
+
+  .box-ss {
+    background-color: #f9484a;
+    background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
+  }
+
+  .clock {
+    margin: 0 1% 0 0;
+    background: #f68657;
+    width: 50vmin;
+    height: 50vmin;
+    border-radius: 50%;
+    position: relative;
+  }
+  .clock:before {
+    content: "";
+    position: absolute;
+    margin: auto;
+    width: 3%;
+    height: 12%;
+    background: #70bd63;
+    left: 0;
+    right: 0;
+    top: -10%;
+    z-index: -1;
+    transform: rotate(10deg);
+  }
+  .clock:after {
+    content: "";
+    position: absolute;
+    margin: auto;
+    width: 8%;
+    height: 16%;
+    background: #70bd63;
+    left: 0;
+    right: 15%;
+    top: -10%;
+    z-index: -1;
+    transform: rotate(-40deg);
+    border-radius: 100% 30% 50% 0;
+  }
+
+  .middle1 {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 5%;
+    height: 5%;
+    background: #f46a30;
+    border-radius: 50%;
+    z-index: 1;
+  }
+
+  .middle {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 5%;
+    height: 5%;
+    background: #f36327;
+    border-radius: 50%;
+  }
+  .middle:before {
+    content: "";
+    position: absolute;
+    background: #f57c48;
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+    left: 400%;
+    top: 150%;
+    box-shadow: -20vmin -10vmin 0 0 #f57c48, -10vmin -24vmin 0 0 #f57c48,
+      4vmin 10vmin 0 0 #f57c48, -20vmin 14vmin 0 0 #f57c48,
+      -30vmin 4vmin 0 0 #f57c48;
+  }
+  .middle:after {
+    content: "";
+    position: absolute;
+    background: #f57c48;
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    left: 400%;
+    top: 150%;
+    box-shadow: -26vmin -16vmin 0 0 #f57c48, 6vmin -14vmin 0 0 #f57c48,
+      -10vmin 8vmin 0 0 #f57c48, -4vmin 18vmin 0 0 #f57c48,
+      12vmin -5vmin 0 0 #f57c48;
+  }
+
+  .second {
+    position: absolute;
+    margin: auto;
+    left: 49%;
+    bottom: 50%;
+    background: #ab3909;
+    width: 2%;
+    height: 40%;
+    transform: rotate(0);
+    transform-origin: 50% 100%;
+  }
 }
 
-.boxes-r {
-  /* border: 2px solid greenyellow; */
-  width: 70%;
-  height: 70%;
-  display: flex;
-  flex-direction: column;
-}
+/*********************************************MOBILE RESPONSIVENESS 19.5:9******************/
+@media only screen and (max-width: 1080px) {
+  .matrix {
+    height: 100%;
+    width: 100%;
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 0 2% 0 4%;
+    align-items: center;
+  }
 
-.box {
-  height: 100%;
-  width: 100%;
-  display: table;
-  text-align: center;
+  .boxes-r {
+    /* border: 2px solid greenyellow; */
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+  }
 
-  background-color: rgba(0, 0, 0, 0);
-  color: white;
+  .box {
+    height: 100%;
+    width: 100%;
+    display: table;
+    text-align: center;
 
-  font-family: "Bangers";
-  font-size: 22px;
-  padding: 0;
+    font-family: "Bangers";
+    font-size: 22px;
+    padding: 0;
 
-  border-radius: 10px;
-  box-shadow: 0 0 1em rgba(240, 225, 245, 0.5);
-}
+    border-radius: 10px;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
+  }
 
-.timestamp {
-  position: relative;
-  top: 20%;
-  font-size: 135px;
-  display: table-cell;
-  vertical-align: center;
-  /* color: rgba(152, 152, 156, 1); */
+  .timestamp {
+    position: relative;
+    top: 20%;
+    font-size: 135px;
+    display: table-cell;
+    vertical-align: center;
+    /* color: rgba(152, 152, 156, 1); */
 
-  background: -webkit-linear-gradient(#45fc79, #3604b6);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+    background: -webkit-linear-gradient(#45fc79, #3604b6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-.box-dd > .timestamp {
-  position: relative;
-  top: 5%;
-  left: 7%;
-  font-size: 300px;
-  display: table-cell;
-  vertical-align: center;
-  text-align: left;
+  .box-dd > .timestamp {
+    position: relative;
+    top: 50%;
+    /* left: 7%; */
+    font-size: 175px;
+    display: table-cell;
+    vertical-align: center;
+    text-align: left;
 
-  background: -webkit-linear-gradient(#3eadcf, #abe9cd);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+    background: -webkit-linear-gradient(#3eadcf, #abe9cd);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-.boxes-dd {
-  width: 100%;
-  height: 60%;
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-  justify-content: stretch;
-}
+  .boxes-dd {
+    width: 100%;
+    height: 50%;
+    /* display: flex;
+    flex-direction: row;
+    align-self: center;
+    justify-self: center; */
+  }
 
-.boxes-tt {
-  width: 100%;
-  height: 40%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
+  .boxes-tt {
+    width: 120%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: space-evenly; */
+    position: relative;
+    right: 10%;
+  }
 
-.box-dd {
-  font-size: 1000%;
-  box-shadow: none;
-}
+  .box-dd {
+    /* font-size: 500%; */
+    box-shadow: none;
+  }
 
-.box-hh {
-  background-color: #f7b42c;
-  background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%);
-}
+  .box-hh {
+    background-color: #f7b42c;
+    background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%);
+  }
 
-.box-mm {
-  margin: 5%;
-  padding: 0;
-  background-color: #90d5ec;
-  background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
-}
+  .box-mm {
+    margin: 5%;
+    padding: 0;
+    background-color: #90d5ec;
+    background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
+  }
 
-.box-ss {
-  background-color: #f9484a;
-  background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
-}
+  .box-ss {
+    background-color: #f9484a;
+    background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
+  }
 
-.clock {
-  margin: 0 1% 0 0;
-  background: #f68657;
-  width: 50vmin;
-  height: 50vmin;
-  border-radius: 50%;
-  position: relative;
-}
-.clock:before {
-  content: "";
-  position: absolute;
-  margin: auto;
-  width: 3%;
-  height: 12%;
-  background: #70bd63;
-  left: 0;
-  right: 0;
-  top: -10%;
-  z-index: -1;
-  transform: rotate(10deg);
-}
-.clock:after {
-  content: "";
-  position: absolute;
-  margin: auto;
-  width: 8%;
-  height: 16%;
-  background: #70bd63;
-  left: 0;
-  right: 15%;
-  top: -10%;
-  z-index: -1;
-  transform: rotate(-40deg);
-  border-radius: 100% 30% 50% 0;
-}
+  .clock {
+    margin: 0 1% 0 0;
+    background: #f68657;
+    width: 50vmin;
+    height: 50vmin;
+    border-radius: 50%;
+    position: relative;
+    top: 12%;
+  }
+  .clock:before {
+    content: "";
+    position: absolute;
+    margin: auto;
+    width: 3%;
+    height: 12%;
+    background: #70bd63;
+    left: 0;
+    right: 0;
+    top: -10%;
+    z-index: -1;
+    transform: rotate(10deg);
+  }
+  .clock:after {
+    content: "";
+    position: absolute;
+    margin: auto;
+    width: 8%;
+    height: 16%;
+    background: #70bd63;
+    left: 0;
+    right: 15%;
+    top: -10%;
+    z-index: -1;
+    transform: rotate(-40deg);
+    border-radius: 100% 30% 50% 0;
+  }
 
-.middle1 {
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 5%;
-  height: 5%;
-  background: #f46a30;
-  border-radius: 50%;
-  z-index: 1;
-}
+  .middle1 {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 5%;
+    height: 5%;
+    background: #f46a30;
+    border-radius: 50%;
+    z-index: 1;
+  }
 
-.middle {
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 5%;
-  height: 5%;
-  background: #f36327;
-  border-radius: 50%;
-}
-.middle:before {
-  content: "";
-  position: absolute;
-  background: #f57c48;
-  width: 80%;
-  height: 80%;
-  border-radius: 50%;
-  left: 400%;
-  top: 150%;
-  box-shadow: -20vmin -10vmin 0 0 #f57c48, -10vmin -24vmin 0 0 #f57c48,
-    4vmin 10vmin 0 0 #f57c48, -20vmin 14vmin 0 0 #f57c48,
-    -30vmin 4vmin 0 0 #f57c48;
-}
-.middle:after {
-  content: "";
-  position: absolute;
-  background: #f57c48;
-  width: 90%;
-  height: 90%;
-  border-radius: 50%;
-  left: 400%;
-  top: 150%;
-  box-shadow: -26vmin -16vmin 0 0 #f57c48, 6vmin -14vmin 0 0 #f57c48,
-    -10vmin 8vmin 0 0 #f57c48, -4vmin 18vmin 0 0 #f57c48,
-    12vmin -5vmin 0 0 #f57c48;
-}
+  .middle {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 5%;
+    height: 5%;
+    background: #f36327;
+    border-radius: 50%;
+  }
+  .middle:before {
+    content: "";
+    position: absolute;
+    background: #f57c48;
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+    left: 400%;
+    top: 150%;
+    box-shadow: -20vmin -10vmin 0 0 #f57c48, -10vmin -24vmin 0 0 #f57c48,
+      4vmin 10vmin 0 0 #f57c48, -20vmin 14vmin 0 0 #f57c48,
+      -30vmin 4vmin 0 0 #f57c48;
+  }
+  .middle:after {
+    content: "";
+    position: absolute;
+    background: #f57c48;
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    left: 400%;
+    top: 150%;
+    box-shadow: -26vmin -16vmin 0 0 #f57c48, 6vmin -14vmin 0 0 #f57c48,
+      -10vmin 8vmin 0 0 #f57c48, -4vmin 18vmin 0 0 #f57c48,
+      12vmin -5vmin 0 0 #f57c48;
+  }
 
-.second {
-  position: absolute;
-  margin: auto;
-  left: 49%;
-  bottom: 50%;
-  background: #ab3909;
-  width: 2%;
-  height: 40%;
-  transform: rotate(0);
-  transform-origin: 50% 100%;
+  .second {
+    position: absolute;
+    margin: auto;
+    left: 49%;
+    bottom: 50%;
+    background: #ab3909;
+    width: 2%;
+    height: 40%;
+    transform: rotate(0);
+    transform-origin: 50% 100%;
+  }
 }
