--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -235,14 +235,14 @@ body {
 
   .boxes-r {
     /* border: 2px solid greenyellow; */
-    width: 70%;
+    width: 100%;
     height: 70%;
     display: flex;
     flex-direction: column;
   }
 
   .box {
-    height: 100%;
+    height: 50%;
     width: 100%;
     display: table;
     text-align: center;
@@ -258,7 +258,7 @@ body {
   .timestamp {
     position: relative;
     top: 20%;
-    font-size: 135px;
+    font-size: 4.8em;
     display: table-cell;
     vertical-align: center;
     /* color: rgba(152, 152, 156, 1); */
@@ -268,42 +268,31 @@ body {
     -webkit-text-fill-color: transparent;
   }
 
-  .box-dd > .timestamp {
-    position: relative;
-    top: 50%;
-    /* left: 7%; */
-    font-size: 175px;
-    display: table-cell;
-    vertical-align: center;
-    text-align: left;
-
-    background: -webkit-linear-gradient(#3eadcf, #abe9cd);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
   .boxes-dd {
     width: 100%;
     height: 50%;
+    /* border: 2px solid skyblue; */
     /* display: flex;
     flex-direction: row;
     align-self: center;
     justify-self: center; */
   }
-
   .boxes-tt {
-    width: 95%;
-    height: 20%;
+    /* border: 2px solid black; */
+    width: 100%;
+    height: 50%;
+    padding: 0.5em;
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* justify-content: space-evenly; */
+    justify-content: center;
     position: relative;
     right: -1%;
   }
 
   .box-dd {
     /* font-size: 500%; */
+    /* width: 30%; */
     box-shadow: none;
   }
 
@@ -324,6 +313,20 @@ body {
     background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
   }
 
+  .box-dd > .timestamp {
+    position: relative;
+    top: 75%;
+    left: 2%;
+    font-size: 6em;
+    display: table-cell;
+    vertical-align: center;
+    text-align: left;
+
+    background: -webkit-linear-gradient(#3eadcf, #abe9cd);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   .clock {
     margin: 0 1% 0 0;
     background: #f68657;
@@ -331,7 +334,7 @@ body {
     height: 50vmin;
     border-radius: 50%;
     position: relative;
-    top: 12%;
+    top: 10%;
   }
   .clock:before {
     content: "";
