--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -77,15 +77,34 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-
   .boxes-dd {
     width: 100%;
     height: 60%;
     display: flex;
     flex-direction: row;
-    align-items: stretch;
-    justify-content: stretch;
+    /* align-items: stretch; */
+    /* justify-content: stretch; */
   }
+
+  /***********************************/
+  .box-dd:nth-child(1) {
+    width: 80%;
+    height: inherit;
+  }
+
+  .box-dd:nth-child(2) {
+    /* border: 1px solid black; */
+    width: 20%;
+    height: inherit;
+  }
+
+  .box-dd > .event {
+    font-size: 100px;
+    background: -webkit-linear-gradient(#1eeeca, #86a8e7, #f018f0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  /**************************************/
 
   .boxes-tt {
     width: 100%;
@@ -272,11 +291,31 @@ body {
     width: 100%;
     height: 50%;
     /* border: 2px solid skyblue; */
-    /* display: flex;
+    display: flex;
     flex-direction: row;
-    align-self: center;
-    justify-self: center; */
   }
+
+  .box-dd:nth-child(1) {
+    width: 80%;
+    height: inherit;
+  }
+
+  .box-dd:nth-child(2) {
+    /* border: 1px solid black; */
+    width: 20%;
+    height: inherit;
+    align-self: flex-end;
+    position: relative;
+    right: 10px;
+  }
+
+  .box-dd > .event {
+    font-size: 80px;
+    background: -webkit-linear-gradient(#1eeeca, #86a8e7, #f018f0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   .boxes-tt {
     /* border: 2px solid black; */
     width: 100%;
@@ -317,7 +356,7 @@ body {
     position: relative;
     top: 100%;
     right: 2%;
-    font-size: 250px;
+    font-size: 200px;
     display: table-cell;
     vertical-align: center;
     text-align: left;
